# iotc-c-lib

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md
.github/workflows/: main.yml
core/include/: iotcl.h  iotcl_c2d.h  iotcl_certs.h  iotcl_cfg.h  iotcl_constants.h  iotcl_example_config.h  iotcl_internal.h  iotcl_log.h  iotcl_telemetry.h  iotcl_util.h  iotconnect_common.h  iotconnect_device_identity.h  iotconnect_lib_config.h  iotconnect_telemetry.h
core/src/: iotcl.c  iotcl_c2d.c  iotcl_internal.c  iotcl_telemetry.c  iotcl_util.c  iotconnect_common.c
docs/examples/: 01-telemetry.md  02-c2d.md  03-identity.md
include/: iotconnect_common.h  iotconnect_discovery.h  iotconnect_discovery_v3.h  iotconnect_event.h  iotconnect_lib.h  iotconnect_lib_config.h  iotconnect_request.h  iotconnect_telemetry.h
modules/device-rest-api/: iotcl_dra_discovery.c  iotcl_dra_discovery.h  iotcl_dra_identity.c  iotcl_dra_identity.h  iotcl_dra_url.c  iotcl_dra_url.h
modules/discovery-v2/: iotcl_discovery.c  iotcl_discovery.h
modules/heap-tracker/: heap_tracker.c  heap_tracker.h
src/: iotconnect_common.c  iotconnect_device_identity.c  iotconnect_discovery.c  iotconnect_discovery_v3.c  iotconnect_event.c  iotconnect_lib.c  iotconnect_request.c  iotconnect_telemetry.c
tests/: .gitignore  CMakeLists.txt  Makefile  build-tests.sh  discovery.c  event.c  iotcl_config.h  request.c  telemetry.c
tests/unit/: .gitignore  CMakeLists.txt  build-tests.sh  device_rest_api.c  discovery.c  event.c  iotcl_config.h  telemetry.c
tools/cert-files/: README.md
tools/cert-generation-ca/: makecerts.sh
tools/cert-generation-self-signed/: README.md  gen-self-signed-certs.sh
